gitops/degoog/degoog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: degoog
  namespace: apps
  labels:
    app: degoog

spec:
  type: NodePort

  selector:
    app: degoog

  ports:
    - name: http
      port: 4444
      targetPort: 4444
      nodePort: 30882
      protocol: TCP
